package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	"math/rand"
	"sync"
	"time"

	guuid "github.com/Lzww0608/GUUID"
	pb "github.com/aetherflow/aetherflow/api/proto/statesync"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// æ¼”ç¤ºé…ç½®
type DemoConfig struct {
	StateSyncAddr string
	Users         int
	Duration      time.Duration
	Operations    int
}

// ç”¨æˆ·æ¨¡æ‹Ÿ
type SimulatedUser struct {
	Name      string
	UserID    string
	SessionID string
	Client    pb.StateSyncServiceClient
	DocID     guuid.UUID
}

// ç»Ÿè®¡ä¿¡æ¯
type Stats struct {
	mu             sync.Mutex
	TotalOps       int
	SuccessOps     int
	FailedOps      int
	TotalLatency   time.Duration
	MinLatency     time.Duration
	MaxLatency     time.Duration
	ConflictCount  int
	ReceivedEvents int
}

func main() {
	config := parseFlags()

	fmt.Println("================================")
	fmt.Println("  AetherFlow å®æ—¶åä½œæ¼”ç¤º")
	fmt.Println("================================")
	fmt.Println()

	// è¿æ¥ StateSync Service
	conn, err := grpc.Dial(config.StateSyncAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("è¿æ¥å¤±è´¥: %v", err)
	}
	defer conn.Close()

	client := pb.NewStateSyncServiceClient(conn)

	// åˆ›å»ºå…±äº«æ–‡æ¡£
	docID := createSharedDocument(client)
	fmt.Printf("âœ… åˆ›å»ºå…±äº«æ–‡æ¡£: %s\n", docID.String())
	fmt.Println()

	// åˆ›å»ºæ¨¡æ‹Ÿç”¨æˆ·
	users := make([]*SimulatedUser, config.Users)
	userNames := []string{"Alice", "Bob", "Carol", "Dave", "Eve", "Frank", "Grace", "Helen"}

	for i := 0; i < config.Users; i++ {
		name := userNames[i%len(userNames)]
		if config.Users > len(userNames) {
			name = fmt.Sprintf("%s-%d", name, i/len(userNames)+1)
		}

		users[i] = &SimulatedUser{
			Name:      name,
			UserID:    fmt.Sprintf("user-%d", i+1),
			SessionID: guuid.NewV7().String(),
			Client:    client,
			DocID:     docID,
		}

		fmt.Printf("ğŸ‘¤ ç”¨æˆ· %s åŠ å…¥åä½œ\n", users[i].Name)
		time.Sleep(200 * time.Millisecond)
	}

	fmt.Println()
	fmt.Println("ğŸš€ å¼€å§‹åä½œæ¼”ç¤º...")
	fmt.Println()

	// å¯åŠ¨ç»Ÿè®¡
	stats := &Stats{
		MinLatency: time.Hour,
	}

	// å¯åŠ¨æ‰€æœ‰ç”¨æˆ·çš„è®¢é˜…
	var wg sync.WaitGroup
	ctx, cancel := context.WithTimeout(context.Background(), config.Duration)
	defer cancel()

	// è®¢é˜…æ–‡æ¡£æ›´æ–°
	for _, user := range users {
		wg.Add(1)
		go subscribeUpdates(ctx, &wg, user, stats)
	}

	// æ¨¡æ‹Ÿåä½œç¼–è¾‘
	time.Sleep(2 * time.Second) // ç­‰å¾…è®¢é˜…å»ºç«‹

	// å¯åŠ¨æ“ä½œåç¨‹
	operationsPerUser := config.Operations / config.Users
	for _, user := range users {
		wg.Add(1)
		go performOperations(ctx, &wg, user, operationsPerUser, stats)
	}

	// ç­‰å¾…å®Œæˆ
	fmt.Println("â³ ç­‰å¾…æ‰€æœ‰æ“ä½œå®Œæˆ...")
	wg.Wait()

	// æ‰“å°ç»Ÿè®¡
	printStats(stats, config)

	// è·å–æœ€ç»ˆæ–‡æ¡£çŠ¶æ€
	printDocumentState(client, docID)
}

func parseFlags() *DemoConfig {
	config := &DemoConfig{}

	flag.StringVar(&config.StateSyncAddr, "statesync", "localhost:9002", "StateSync service address")
	flag.IntVar(&config.Users, "users", 3, "Number of concurrent users")
	flag.DurationVar(&config.Duration, "duration", 30*time.Second, "Demo duration")
	flag.IntVar(&config.Operations, "operations", 50, "Total operations")

	flag.Parse()

	return config
}

func createSharedDocument(client pb.StateSyncServiceClient) guuid.UUID {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	docID, _ := guuid.NewV7()

	req := &pb.CreateDocumentRequest{
		Id:        docID.String(),
		Name:      "Collaboration Demo Document",
		Type:      "text",
		CreatedBy: "demo-system",
		Content:   []byte("# Collaboration Demo\n\nThis is a shared document.\n"),
	}

	_, err := client.CreateDocument(ctx, req)
	if err != nil {
		log.Fatalf("åˆ›å»ºæ–‡æ¡£å¤±è´¥: %v", err)
	}

	return docID
}

func subscribeUpdates(ctx context.Context, wg *sync.WaitGroup, user *SimulatedUser, stats *Stats) {
	defer wg.Done()

	stream, err := user.Client.SubscribeDocument(ctx, &pb.SubscribeDocumentRequest{
		DocumentId: user.DocID.String(),
		UserId:     user.UserID,
		SessionId:  user.SessionID,
	})

	if err != nil {
		log.Printf("âŒ %s: è®¢é˜…å¤±è´¥: %v\n", user.Name, err)
		return
	}

	fmt.Printf("ğŸ“¡ %s: å·²è®¢é˜…æ–‡æ¡£æ›´æ–°\n", user.Name)

	for {
		select {
		case <-ctx.Done():
			return
		default:
			event, err := stream.Recv()
			if err != nil {
				return
			}

			stats.mu.Lock()
			stats.ReceivedEvents++
			stats.mu.Unlock()

			// æ‰“å°æ¥æ”¶åˆ°çš„æ“ä½œ
			if event.Type == "operation_applied" {
				fmt.Printf("  ğŸ“ %s æ”¶åˆ°æ›´æ–°: æ“ä½œç±»å‹=%s, ç‰ˆæœ¬=%d\n",
					user.Name, event.Operation.Type, event.Operation.Version)
			}

			if event.Type == "conflict_detected" {
				fmt.Printf("  âš ï¸  %s æ£€æµ‹åˆ°å†²çª\n", user.Name)
				stats.mu.Lock()
				stats.ConflictCount++
				stats.mu.Unlock()
			}
		}
	}
}

func performOperations(ctx context.Context, wg *sync.WaitGroup, user *SimulatedUser, count int, stats *Stats) {
	defer wg.Done()

	operations := []string{"insert", "delete", "update", "move"}
	contents := []string{
		"Hello from " + user.Name,
		"Collaborative editing is awesome!",
		"Real-time sync works great.",
		"Testing AetherFlow...",
	}

	for i := 0; i < count; i++ {
		select {
		case <-ctx.Done():
			return
		default:
			// éšæœºæ“ä½œç±»å‹
			opType := operations[rand.Intn(len(operations))]
			content := contents[rand.Intn(len(contents))]

			// æ‰§è¡Œæ“ä½œ
			start := time.Now()

			opID, _ := guuid.NewV7()
			sessionID, _ := guuid.Parse(user.SessionID)

			req := &pb.ApplyOperationRequest{
				DocumentId: user.DocID.String(),
				Operation: &pb.Operation{
					Id:        opID.String(),
					DocId:     user.DocID.String(),
					UserId:    user.UserID,
					SessionId: sessionID.String(),
					Type:      opType,
					Data:      []byte(content),
					Timestamp: time.Now().Unix(),
					ClientId:  user.Name,
				},
			}

			opCtx, cancel := context.WithTimeout(context.Background(), 3*time.Second)
			_, err := user.Client.ApplyOperation(opCtx, req)
			cancel()

			latency := time.Since(start)

			// æ›´æ–°ç»Ÿè®¡
			stats.mu.Lock()
			stats.TotalOps++
			if err == nil {
				stats.SuccessOps++
				stats.TotalLatency += latency

				if latency < stats.MinLatency {
					stats.MinLatency = latency
				}
				if latency > stats.MaxLatency {
					stats.MaxLatency = latency
				}

				fmt.Printf("  âœ… %s: %s æ“ä½œ (å»¶è¿Ÿ: %dms)\n",
					user.Name, opType, latency.Milliseconds())
			} else {
				stats.FailedOps++
				fmt.Printf("  âŒ %s: æ“ä½œå¤±è´¥: %v\n", user.Name, err)
			}
			stats.mu.Unlock()

			// éšæœºé—´éš”
			time.Sleep(time.Duration(500+rand.Intn(1500)) * time.Millisecond)
		}
	}
}

func printStats(stats *Stats, config *DemoConfig) {
	fmt.Println()
	fmt.Println("================================")
	fmt.Println("  ğŸ“Š åä½œç»Ÿè®¡")
	fmt.Println("================================")
	fmt.Println()

	fmt.Printf("ğŸ‘¥ ç”¨æˆ·æ•°é‡:        %d\n", config.Users)
	fmt.Printf("â±ï¸  è¿è¡Œæ—¶é•¿:        %s\n", config.Duration)
	fmt.Println()

	fmt.Printf("ğŸ“ æ€»æ“ä½œæ•°:        %d\n", stats.TotalOps)
	fmt.Printf("âœ… æˆåŠŸæ“ä½œ:        %d (%.1f%%)\n",
		stats.SuccessOps,
		float64(stats.SuccessOps)/float64(stats.TotalOps)*100)
	fmt.Printf("âŒ å¤±è´¥æ“ä½œ:        %d\n", stats.FailedOps)
	fmt.Printf("âš ï¸  å†²çªæ•°é‡:        %d\n", stats.ConflictCount)
	fmt.Printf("ğŸ“¡ æ¥æ”¶äº‹ä»¶:        %d\n", stats.ReceivedEvents)
	fmt.Println()

	if stats.SuccessOps > 0 {
		avgLatency := stats.TotalLatency / time.Duration(stats.SuccessOps)
		fmt.Printf("âš¡ å¹³å‡å»¶è¿Ÿ:        %dms\n", avgLatency.Milliseconds())
		fmt.Printf("âš¡ æœ€å°å»¶è¿Ÿ:        %dms\n", stats.MinLatency.Milliseconds())
		fmt.Printf("âš¡ æœ€å¤§å»¶è¿Ÿ:        %dms\n", stats.MaxLatency.Milliseconds())
		fmt.Println()

		throughput := float64(stats.SuccessOps) / config.Duration.Seconds()
		fmt.Printf("ğŸš€ ååé‡:          %.1f ops/sec\n", throughput)
	}

	fmt.Println()
}

func printDocumentState(client pb.StateSyncServiceClient, docID guuid.UUID) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	// è·å–æ–‡æ¡£
	docResp, err := client.GetDocument(ctx, &pb.GetDocumentRequest{
		DocumentId: docID.String(),
	})
	if err != nil {
		log.Printf("è·å–æ–‡æ¡£å¤±è´¥: %v", err)
		return
	}

	// è·å–æ“ä½œå†å²
	histResp, err := client.GetOperationHistory(ctx, &pb.GetOperationHistoryRequest{
		DocumentId: docID.String(),
		Limit:      100,
	})
	if err != nil {
		log.Printf("è·å–å†å²å¤±è´¥: %v", err)
		return
	}

	fmt.Println("================================")
	fmt.Println("  ğŸ“„ æ–‡æ¡£æœ€ç»ˆçŠ¶æ€")
	fmt.Println("================================")
	fmt.Println()

	fmt.Printf("æ–‡æ¡£ ID:          %s\n", docResp.Document.Id)
	fmt.Printf("æ–‡æ¡£åç§°:         %s\n", docResp.Document.Name)
	fmt.Printf("å½“å‰ç‰ˆæœ¬:         %d\n", docResp.Document.Version)
	fmt.Printf("æ´»è·ƒç”¨æˆ·:         %d\n", len(docResp.Document.ActiveUsers))
	fmt.Printf("æ“ä½œå†å²æ•°é‡:     %d\n", len(histResp.Operations))
	fmt.Println()

	// æ˜¾ç¤ºæœ€è¿‘çš„æ“ä½œ
	fmt.Println("æœ€è¿‘çš„æ“ä½œ:")
	count := 5
	if len(histResp.Operations) < count {
		count = len(histResp.Operations)
	}
	for i := 0; i < count; i++ {
		op := histResp.Operations[i]
		fmt.Printf("  [%d] %s by %s (v%d)\n",
			i+1, op.Type, op.ClientId, op.Version)
	}

	fmt.Println()
	fmt.Println("âœ… æ¼”ç¤ºå®Œæˆï¼")
	fmt.Println()
}
