package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	"sync"
	"time"

	guuid "github.com/Lzww0608/GUUID"
	pb "github.com/aetherflow/aetherflow/api/proto/statesync"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// å†²çªæ¼”ç¤ºé…ç½®
type ConflictDemoConfig struct {
	StateSyncAddr  string
	ConflictType   string // "concurrent", "sequential"
	ResolutionType string // "lww", "manual", "merge"
	Users          int
}

// å†²çªåœºæ™¯
type ConflictScenario struct {
	Name        string
	Description string
	Users       []string
	Operations  []ConflictOperation
}

type ConflictOperation struct {
	UserIndex int
	Type      string
	Position  int
	Data      string
	Delay     time.Duration
}

func main() {
	config := parseConflictFlags()

	fmt.Println("================================")
	fmt.Println("  AetherFlow å†²çªè§£å†³æ¼”ç¤º")
	fmt.Println("================================")
	fmt.Println()

	// è¿æ¥ StateSync Service
	conn, err := grpc.Dial(config.StateSyncAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("è¿æ¥å¤±è´¥: %v", err)
	}
	defer conn.Close()

	client := pb.NewStateSyncServiceClient(conn)

	// é€‰æ‹©å†²çªåœºæ™¯
	scenario := selectScenario(config)

	fmt.Printf("ğŸ“‹ åœºæ™¯: %s\n", scenario.Name)
	fmt.Printf("ğŸ“ æè¿°: %s\n", scenario.Description)
	fmt.Printf("ğŸ‘¥ ç”¨æˆ·: %d\n", len(scenario.Users))
	fmt.Printf("ğŸ”§ è§£å†³ç­–ç•¥: %s\n", config.ResolutionType)
	fmt.Println()

	// åˆ›å»ºæ–‡æ¡£
	docID := createConflictDocument(client)
	fmt.Printf("âœ… åˆ›å»ºæ–‡æ¡£: %s\n", docID.String())
	fmt.Println()

	// è¿è¡Œå†²çªåœºæ™¯
	runConflictScenario(client, docID, scenario, config)

	// æ£€æŸ¥å†²çª
	checkConflicts(client, docID)

	// æ˜¾ç¤ºæœ€ç»ˆçŠ¶æ€
	displayFinalState(client, docID)
}

func parseConflictFlags() *ConflictDemoConfig {
	config := &ConflictDemoConfig{}

	flag.StringVar(&config.StateSyncAddr, "statesync", "localhost:9002", "StateSync service address")
	flag.StringVar(&config.ConflictType, "conflict-type", "concurrent", "Conflict type: concurrent, sequential")
	flag.StringVar(&config.ResolutionType, "resolution", "lww", "Resolution strategy: lww, manual, merge")
	flag.IntVar(&config.Users, "users", 2, "Number of users")

	flag.Parse()

	return config
}

func selectScenario(config *ConflictDemoConfig) *ConflictScenario {
	if config.ConflictType == "concurrent" {
		return &ConflictScenario{
			Name:        "å¹¶å‘ç¼–è¾‘å†²çª",
			Description: "ä¸¤ä¸ªç”¨æˆ·åŒæ—¶ç¼–è¾‘åŒä¸€ä½ç½®",
			Users:       []string{"Alice", "Bob"},
			Operations: []ConflictOperation{
				{UserIndex: 0, Type: "update", Position: 10, Data: "Alice's text", Delay: 0},
				{UserIndex: 1, Type: "update", Position: 10, Data: "Bob's text", Delay: 100 * time.Millisecond},
			},
		}
	} else {
		return &ConflictScenario{
			Name:        "é¡ºåºç¼–è¾‘å†²çª",
			Description: "å¤šä¸ªç”¨æˆ·ä¾æ¬¡ç¼–è¾‘å¯¼è‡´ç‰ˆæœ¬å†²çª",
			Users:       []string{"Alice", "Bob", "Carol"},
			Operations: []ConflictOperation{
				{UserIndex: 0, Type: "insert", Position: 0, Data: "First ", Delay: 0},
				{UserIndex: 1, Type: "insert", Position: 0, Data: "Second ", Delay: 500 * time.Millisecond},
				{UserIndex: 2, Type: "insert", Position: 0, Data: "Third ", Delay: 1 * time.Second},
			},
		}
	}
}

func createConflictDocument(client pb.StateSyncServiceClient) guuid.UUID {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	docID, _ := guuid.NewV7()

	req := &pb.CreateDocumentRequest{
		Id:        docID.String(),
		Name:      "Conflict Demo Document",
		Type:      "text",
		CreatedBy: "demo-system",
		Content:   []byte("Initial content."),
	}

	_, err := client.CreateDocument(ctx, req)
	if err != nil {
		log.Fatalf("åˆ›å»ºæ–‡æ¡£å¤±è´¥: %v", err)
	}

	return docID
}

func runConflictScenario(client pb.StateSyncServiceClient, docID guuid.UUID,
	scenario *ConflictScenario, config *ConflictDemoConfig) {

	fmt.Println("ğŸš€ å¼€å§‹æ‰§è¡Œå†²çªåœºæ™¯...")
	fmt.Println()

	var wg sync.WaitGroup
	results := make(chan OperationResult, len(scenario.Operations))

	// è®¢é˜…å†²çªäº‹ä»¶
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	wg.Add(1)
	go monitorConflicts(ctx, &wg, client, docID, scenario.Users[0])

	// æ‰§è¡Œæ“ä½œ
	for _, op := range scenario.Operations {
		wg.Add(1)
		go func(operation ConflictOperation) {
			defer wg.Done()

			// å»¶è¿Ÿ
			time.Sleep(operation.Delay)

			userName := scenario.Users[operation.UserIndex]
			userID := fmt.Sprintf("user-%d", operation.UserIndex)
			sessionID := guuid.NewV7().String()

			fmt.Printf("ğŸ‘¤ %s å¼€å§‹ %s æ“ä½œ (ä½ç½®: %d)\n",
				userName, operation.Type, operation.Position)

			// æ‰§è¡Œæ“ä½œ
			start := time.Now()

			opID, _ := guuid.NewV7()

			req := &pb.ApplyOperationRequest{
				DocumentId: docID.String(),
				Operation: &pb.Operation{
					Id:        opID.String(),
					DocId:     docID.String(),
					UserId:    userID,
					SessionId: sessionID,
					Type:      operation.Type,
					Data:      []byte(operation.Data),
					Timestamp: time.Now().Unix(),
					ClientId:  userName,
				},
			}

			opCtx, opCancel := context.WithTimeout(context.Background(), 5*time.Second)
			resp, err := client.ApplyOperation(opCtx, req)
			opCancel()

			latency := time.Since(start)

			result := OperationResult{
				UserName: userName,
				OpType:   operation.Type,
				Success:  err == nil,
				Latency:  latency,
				Version:  0,
				Error:    err,
			}

			if err == nil && resp.Operation != nil {
				result.Version = resp.Operation.Version
				fmt.Printf("  âœ… %s: æ“ä½œæˆåŠŸ (ç‰ˆæœ¬: %d, å»¶è¿Ÿ: %dms)\n",
					userName, result.Version, latency.Milliseconds())
			} else {
				fmt.Printf("  âŒ %s: æ“ä½œå¤±è´¥: %v\n", userName, err)
			}

			results <- result
		}(op)
	}

	// ç­‰å¾…æ‰€æœ‰æ“ä½œå®Œæˆ
	wg.Wait()
	close(results)

	// æ±‡æ€»ç»“æœ
	fmt.Println()
	fmt.Println("ğŸ“Š æ“ä½œç»“æœ:")
	successCount := 0
	for result := range results {
		if result.Success {
			successCount++
			fmt.Printf("  âœ… %s: v%d (å»¶è¿Ÿ: %dms)\n",
				result.UserName, result.Version, result.Latency.Milliseconds())
		} else {
			fmt.Printf("  âŒ %s: å¤±è´¥\n", result.UserName)
		}
	}

	fmt.Printf("\næˆåŠŸç‡: %d/%d (%.1f%%)\n",
		successCount, len(scenario.Operations),
		float64(successCount)/float64(len(scenario.Operations))*100)
	fmt.Println()
}

type OperationResult struct {
	UserName string
	OpType   string
	Success  bool
	Latency  time.Duration
	Version  uint64
	Error    error
}

func monitorConflicts(ctx context.Context, wg *sync.WaitGroup,
	client pb.StateSyncServiceClient, docID guuid.UUID, userName string) {
	defer wg.Done()

	stream, err := client.SubscribeDocument(ctx, &pb.SubscribeDocumentRequest{
		DocumentId: docID.String(),
		UserId:     "monitor",
		SessionId:  guuid.NewV7().String(),
	})

	if err != nil {
		log.Printf("è®¢é˜…å¤±è´¥: %v", err)
		return
	}

	fmt.Println("ğŸ” ç›‘æ§å†²çªäº‹ä»¶...")
	fmt.Println()

	conflictDetected := false

	for {
		select {
		case <-ctx.Done():
			return
		default:
			event, err := stream.Recv()
			if err != nil {
				return
			}

			if event.Type == "conflict_detected" {
				conflictDetected = true
				fmt.Println()
				fmt.Println("âš ï¸  ========== æ£€æµ‹åˆ°å†²çª ==========")
				fmt.Printf("âš ï¸  æ–‡æ¡£: %s\n", event.DocumentId)
				fmt.Printf("âš ï¸  æ—¶é—´: %s\n", time.Now().Format("15:04:05"))
				fmt.Println("âš ï¸  ===================================")
				fmt.Println()
			}

			if event.Type == "conflict_resolved" {
				fmt.Println()
				fmt.Println("ğŸ”§ ========== å†²çªå·²è§£å†³ ==========")
				fmt.Printf("ğŸ”§ ç­–ç•¥: %s\n", event.Metadata["resolution"])
				fmt.Printf("ğŸ”§ èƒœè€…: %s\n", event.Metadata["winner"])
				fmt.Println("ğŸ”§ ===================================")
				fmt.Println()
			}
		}
	}
}

func checkConflicts(client pb.StateSyncServiceClient, docID guuid.UUID) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	// è·å–å†²çªå†å²
	// æ³¨æ„ï¼šè¿™éœ€è¦åœ¨ proto ä¸­å®šä¹‰ ListConflicts æ–¹æ³•
	// è¿™é‡Œç®€åŒ–å¤„ç†ï¼Œé€šè¿‡ GetDocument æŸ¥çœ‹æ˜¯å¦æœ‰å†²çªæ ‡è®°

	resp, err := client.GetDocument(ctx, &pb.GetDocumentRequest{
		DocumentId: docID.String(),
	})

	if err != nil {
		log.Printf("è·å–æ–‡æ¡£å¤±è´¥: %v", err)
		return
	}

	fmt.Println("ğŸ” å†²çªæ£€æŸ¥:")
	if resp.Document.Metadata != nil {
		if conflictCount, ok := resp.Document.Metadata["conflict_count"]; ok {
			fmt.Printf("  å†²çªæ¬¡æ•°: %s\n", conflictCount)
		} else {
			fmt.Println("  æ— å†²çªè®°å½•")
		}
	}
	fmt.Println()
}

func displayFinalState(client pb.StateSyncServiceClient, docID guuid.UUID) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	// è·å–æ–‡æ¡£
	docResp, err := client.GetDocument(ctx, &pb.GetDocumentRequest{
		DocumentId: docID.String(),
	})
	if err != nil {
		log.Printf("è·å–æ–‡æ¡£å¤±è´¥: %v", err)
		return
	}

	// è·å–æ“ä½œå†å²
	histResp, err := client.GetOperationHistory(ctx, &pb.GetOperationHistoryRequest{
		DocumentId: docID.String(),
		Limit:      20,
	})
	if err != nil {
		log.Printf("è·å–å†å²å¤±è´¥: %v", err)
		return
	}

	fmt.Println("================================")
	fmt.Println("  ğŸ“„ æœ€ç»ˆæ–‡æ¡£çŠ¶æ€")
	fmt.Println("================================")
	fmt.Println()

	fmt.Printf("æ–‡æ¡£ç‰ˆæœ¬:         %d\n", docResp.Document.Version)
	fmt.Printf("å†…å®¹é•¿åº¦:         %d å­—èŠ‚\n", len(docResp.Document.Content))
	fmt.Printf("æ“ä½œå†å²:         %d æ¡\n", len(histResp.Operations))
	fmt.Println()

	fmt.Println("æ“ä½œæ—¶é—´çº¿:")
	for i, op := range histResp.Operations {
		status := "âœ…"
		if op.Status == "conflict" {
			status = "âš ï¸"
		} else if op.Status == "rejected" {
			status = "âŒ"
		}

		fmt.Printf("  %s [v%d] %s by %s (%s)\n",
			status, op.Version, op.Type, op.ClientId, op.Status)

		if i >= 9 {
			break
		}
	}

	fmt.Println()
	fmt.Printf("æœ€ç»ˆå†…å®¹é¢„è§ˆ:\n%s\n", string(docResp.Document.Content))
	fmt.Println()

	fmt.Println("âœ… å†²çªæ¼”ç¤ºå®Œæˆï¼")
	fmt.Println()

	fmt.Println("ğŸ’¡ æç¤º:")
	fmt.Println("  - æŸ¥çœ‹ Jaeger UI äº†è§£è¯¦ç»†è¿½è¸ª: http://localhost:16686")
	fmt.Println("  - æŸ¥çœ‹ Metrics äº†è§£æ€§èƒ½æŒ‡æ ‡: http://localhost:9102/metrics")
	fmt.Println()
}
